# ce-test

./: Cargo.toml  GUIDE.md  README.md  ceapp.toml
.claude/skills/ce-test/: SKILL.md
src/: config.rs  lib.rs  main.rs  runner.rs
tests/: on.rs
