[package]
name = "ce-test"
version = "0.1.0"
edition = "2021"
description = "The CE testing harness: spin ephemeral chain-free nodes, run modules, drive direct module<->module mesh communication, assert, and tear down — the foundation of `ce test`."
license = "AGPL-3.0-only"

[lib]
name = "ce_test"
path = "src/lib.rs"

# The `ce-test` CLI (the runner): reads cetest.toml and runs a ceapp's suites (local now, distributed next).
[[bin]]
name = "ce-test"
path = "src/main.rs"

[dependencies]
ce-rs = { git = "https://github.com/ce-net/ce-rs", features = ["serve"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# For reading a seed node's libp2p PeerId off GET /bootstrap (to construct a peer's dial multiaddr).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
# For locating the node data dir (same crate ce-rs uses) to resolve a wallet alias -> full node id.
directories = "5"
# NOTE: ce-test is the framework/substrate — it must NOT depend on any ceapp. A real board is brought
# up by shelling the installed `ce onboard` ceapp over the mesh, not via a Cargo dependency on it.

[dev-dependencies]
